[tool.poetry]

name = "geohash-hilbert"
version = "1.2.1"
description = "Geohash a lng/lat coordinate using the hilbert curve."
authors = ["Tammo Ippen <tammo.ippen@posteo.de>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/tammoippen/geohash-hilbert"
homepage = "https://github.com/tammoippen/geohash-hilbert"

build = "build.py"

include = ["img/*", "tests/*.py"]

keywords = ["geohash", "hilbert", "space filling curve", "geometry"]

classifiers = [
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy'
]

[tool.poetry.dependencies]

python = "~2.7 || ^3.5"

[tool.poetry.dev-dependencies]

flake8 = "^3.5.0"
flake8-import-order = "^0.18"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^1.4.1"
flake8-pep3101 = "^1.2.1"
flake8-polyfill = "^1.0.2"
flake8-quotes = "^1.0.0"
pep8-naming = "^0.7"
pytest = "^3.7.3"
pytest-benchmark = "^3.1.1"
pytest-cov = "^2.5.1"
pytest-flake8 = "^1.0.2"
pytest-mccabe = "^0.1"
python-coveralls = "^2.9.1"
pytest-pythonpath =  "^0.7.3"
six = "^1.11.0"
