[tool.poetry]

name = "geohash-hilbert"
version = "2.0.0"
description = "Geohash a lng/lat coordinate using the hilbert curve."
authors = ["Tammo Ippen <tammo.ippen@posteo.de>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/tammoippen/geohash-hilbert"
homepage = "https://github.com/tammoippen/geohash-hilbert"

build = "build.py"

include = ["img/*", "tests/*.py"]

keywords = ["geohash", "hilbert", "space filling curve", "geometry"]

classifiers = [
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy'
]

[tool.poetry.dependencies]

python = "^3.9"

[tool.poetry.group.dev.dependencies]

ruff = "*"
coveralls = "*"
pytest = "*"
pytest-benchmark = "*"
pytest-cov = "*"
cython = { version = "*", optional = true }

[tool.poetry.extras]
cython = ["cython"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
