[flake8]
application_import_names = geohash_hilbert
max-line-length = 159
max-complexity = 10
import-order-style = google
exclude =
    .venv/
    venv/

[tool:pytest]
python_paths = .
addopts = --cov=geohash_hilbert --cov-report term-missing --cov-report html:cov_html --mccabe -v

[bdist_wheel]
universal = 0

[metadata]
license_file = LICENSE.txt
description-file = README.md
